[tool.poetry]
name = "FTNInfoPlatform"
version = "1.0.0"
description = "提供简书贝相关信息交流服务"
authors = ["yezi <yehaowei20060411@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pywebio = "^1.6.3"
pymongo = "^4.2.0"
PyYAML = "^6.0"
pyecharts = "^1.9.1"
httpx = "^0.23.0"


[tool.poetry.group.dev.dependencies]
types-PyYAML = "^6.0.11"
mypy = "^0.971"
flake8 = "^5.0.4"
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
